Some tests to have a better coverage